--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://heroku_lxfpvlnb:heroku_lxfpvlnb@ds335275.mlab.com:35275/heroku_lxfpvlnb
+spring.data.mongodb.uri=mongodb://heroku_lxfpvlnb:forest1@ds335275.mlab.com:35275/heroku_lxfpvlnb
